test/expected/explain_2i-redef-c++.out
explain int x, x
        ^
9: error: "x": redefinition
